--- a/force-app/main/default/lwc/my1stlwc/my1stlwc.html
+++ b/force-app/main/default/lwc/my1stlwc/my1stlwc.html
@@ -1,3 +1,4 @@
+<!--Parent component-->
 <template>
     <!-- Todo manager container-->
     <lightning-layout class="slds-align_absolute-center slds-text-align_center container" multiple-rows="true">
